剩食功能完成，除了ＤＢ